---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 01. 03. 2019
  Added:
    - High resolution gfx for signs
  Changed:
    - Updated technology icons
    - Additional PNG compression of Refined concrete gfx to reduce mod package size
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 28. 02. 2019
  Added:
    - Frequently asked questions (see Mod Portal or FAQ.md in the mod package)
  Changed:
    - Updated thumbnail image with 0.17 textures
  Bugfixes:
    - Fixed migration issue on some old saves
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 27. 02. 2019
  Added:
    - Factorio 0.17 support
    - Thumbnail image for mod directory
  Changed:
    - Wooden sign and Wooden wall recipes adjusted to compensate for raw wood changes
    - Waterfill recipe adjusted to remove pickaxe requirement
  Removed:
    - Factorio 0.16 support (use Dectorio v0.8.10 when playing 0.16 saves)
    - Removed Hazard gate as it is now the default base game style
---------------------------------------------------------------------------------------------------
Version: 0.8.10
Date: 18. 02. 2019
  Bugfixes:
    - Fixed an issue where decorations were not being removed from all concrete variants (thanks to ST-DDT)
  Locales:
    - Added French translation (thanks to Taniotoshi)
    - Updated Russian translation (thanks to scheugen86 and AfoninZ)
---------------------------------------------------------------------------------------------------
Version: 0.8.9
Date: 04. 08. 2018
  Added:
    - Enabled support for multiple players to place signs concurrently in multiplayer games
    - Added console command to allow admins to remove any orphaned signs that are unminable
  Bugfixes:
    - Fixed an issue where placing a sign could sometimes cause a desync in multiplayer games